--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,24 +7,20 @@ trigger:
 - '*'
 
 pool:
- vmImage: 'ubuntu-20.04'
- demands:
- - npm
-
-variables:
- buildConfiguration: 'Release'
+  vmImage: 'ubuntu-20.04'
+  demands:
+  - npm
 
 steps:
 - task: UseDotNet@2
   displayName: 'Use .NET SDK 5.x'
   inputs:
-   packageType: sdk
-   version: '5.x'
+    version: '5.x'
 
 - task: Npm@1
   displayName: 'Run npm install'
   inputs:
-   verbose: false
+    verbose: false
 
 - script: './node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
   displayName: 'Compile Sass assets'
@@ -39,12 +35,25 @@ steps:
 - task: DotNetCoreCLI@2
   displayName: 'Restore project dependencies'
   inputs:
-   command: 'restore'
-   projects: '**/*.csproj'
+    command: 'restore'
+    projects: '**/*.csproj'
 
 - task: DotNetCoreCLI@2
   displayName: 'Build the project - Release'
   inputs:
-   command: 'build'
-   arguments: '--no-restore --configuration Release'
-   projects: '**/*.csproj'
+    command: 'build'
+    arguments: '--no-restore --configuration Release'
+    projects: '**/*.csproj'
+
+- task: DotNetCoreCLI@2
+  displayName: 'Publish the project - Release'
+  inputs:
+    command: 'publish'
+    projects: '**/*.csproj'
+    publishWebProjects: false
+    arguments: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release'
+    zipAfterPublish: true
+
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact: drop'
+  condition: succeeded()
